welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:5: error: '=' expected but identifier found.
def jardini?re(){growFlowers();avance();avance();avance();avance();fleur(Color.BLUE)} 
           ^FlowerCase:7: error: illegal start of simple expression
}
^